Refactoring home calculation manager, fix new calculation step number value, improve home calculation section ui

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -287,6 +287,8 @@
 	<script src="./js/calc/calc-autocomplete.js"></script>
 	<script src="./js/calc/r-script.js"></script>
 
+	<script src="./js/calc/ui/jquery-ext.js"></script>
+	
 	<!-- model objects -->
 	<script src="./js/calc/model/workspace.js"></script>
 	<script src="./js/calc/model/entity.js"></script>
