Code clean, rename css classes

--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -56,7 +56,7 @@ $(function(){
 	    },
 	    success: function ( json ) {
 	    	checkJobStatus(function() {
-	    		homeCalculationManager.updateCalculationStepButtons();
+	    		homeCalculationManager.updateSteps();
 	    	});
 	    },
 	    error: function (e) {
