--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -38,7 +38,7 @@
 	 	<div class="section-home calculation" id="calculation">
 	 		<div class="page-section">
 	 			
-	 			<div class="steps-container"> 
+	 			<div class="calculation-steps-outer-container"> 
 		  			<div class="button-bar">
 		  				<div class="button-bar-inner">
 			 				<div class="row no-margin" >
@@ -55,31 +55,14 @@
 			 				</div>
 		  				</div>
 		 			</div>
-		 			<ul class="step-buttons-container sortable">
+		 			<ul class="calculation-steps-container sortable">
 	  				</ul>
 	  				<ul style="display: none">
-	  					<li class="ui-state-default calculation-button template">
+	  					<li class="ui-state-default calculation-step template">
 				 			<button type="button" class="btn btn-default btn-home"></button>
 	  					</li>
 	  				</ul>
 	 			</div>
-	 			
-<!-- 		 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html"> -->
-<!-- 	 					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i> -->
-<!-- 	 				</button> -->
-		  		<!-- 
-		  		<div class="step template" style="display: none">
-	 				<button type="button" class="btn default-btn btn-home calculation-button"></button>
-	 				<div class="options hide">
-	 					<button type="button" class="btn default-btn execute">
-	 						<i class="icon-play"></i>
-	 					</button>
-	 					<button type="button" class="btn default-btn delete">
-	 						<i class="icon-trash"></i>
-	 					</button>
-	 				</div>
-		  		</div>
-		  		 -->
 	  		</div>
 	 	</div>
 	 	
