CALC-247 - update test section in step-edit.html (work in progress)

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -162,10 +162,39 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-md-8 col-md-offset-3 input-vars-header inline">
+					<label class="col-md-2"></label>
+					<label class="col-md-2">Min</label>
+					<label class="col-md-2">Max</label>
+					<label class="col-md-2">Increment</label>
+				</div>
+				<div class="col-md-8 col-md-offset-3 input-var-rows">
+					
+				</div>
+			</div>
+			<!-- spacer -->
+			<div style="margin-top: 5em"></div>
+			<div class="row">
 				<div class="col-md-2 col-md-offset-5" style="text-align: center;">
 					<button type="button" class="btn btn-default btn-lg" name="test-btn" style="width: 100%">Test</button>
 				</div>
 			</div>
+			<!-- Test input variable parameters template -->
+			<div class="row inline test-input-var template" style="display: none;">
+				<div class="col-md-2">
+					<label class="control-label variable-name"></label>
+				</div>
+				<div class="col-md-2 form-group small">
+					<input type="text" class="form-control numeric" name="min_">
+				</div>
+				<div class="col-md-2 form-group small">
+					<input type="text" class="form-control numeric" name="max_">
+				</div>
+				<div class="col-md-2 form-group small">
+					<input type="text" class="form-control numeric" name="increment_">
+				</div>
+			</div>
+
 		</div>
 		
 		<div class="row exec" >
