step executed in bulk

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -269,6 +269,10 @@
 	<script src="./js/bootstrap/tooltip.js"></script>
 	<script src="./js/bootstrap/plugin/bootstrap-combobox.js"></script>
 	
+	<!-- d3 -->
+<!-- 	<script src="js/d3/d3.v3.min.js"></script> -->
+	<script src="js/d3/d3.v3.js"></script>
+	
 	<!-- chart jquery plugin -->
 	<script src="js/highcharts.js"></script>
 	
