Code clean, move calculation step test job creation into CalculationStepController

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -179,19 +179,19 @@
 					<button type="button" class="btn btn-default btn-lg" name="test-btn" style="width: 100%">Test</button>
 				</div>
 			</div>
-			<!-- Test input variable parameters template -->
+			<!-- Test input variable settings template -->
 			<div class="row inline test-input-var template" style="display: none;">
 				<div class="col-md-2">
 					<label class="control-label variable-name"></label>
 				</div>
 				<div class="col-md-2 form-group small">
-					<input type="text" class="form-control numeric" name="min_">
+					<input type="text" class="form-control numeric" name="min">
 				</div>
 				<div class="col-md-2 form-group small">
-					<input type="text" class="form-control numeric" name="max_">
+					<input type="text" class="form-control numeric" name="max">
 				</div>
 				<div class="col-md-2 form-group small">
-					<input type="text" class="form-control numeric" name="increment_">
+					<input type="text" class="form-control numeric" name="increment">
 				</div>
 			</div>
 
