execute all steps

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -52,6 +52,11 @@
 					 					<i class="fa-trash-o icon-5"></i>
 					 				</button>
 				 				</div>
+				 				<div class="col-md-6 no-padding">
+				 					<button type="button" class="btn execute">
+					 					<i class="fa-play icon-5"></i>
+					 				</button>
+				 				</div>
 			 				</div>
 		  				</div>
 		 			</div>
