added task logger and r errors manages inside the task

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -118,6 +118,13 @@
 				</div>
 				<div class="modal-body"></div>
 				<div class="modal-footer hide">
+					<div class="row log">
+						<div class="col-md-2">
+							<button type="button" class="btn option-btn" style="">Console</button>
+						</div>
+						<div class="col-md-8 console">
+						</div>
+					</div>
 					<button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
 				</div>
 			</div><!-- /.modal-content -->
@@ -126,8 +133,8 @@
 
 	<div class="row task-status hide">
    		<div class="col-md-1 number"></div>
-   		<div class="col-md-2 name"></div>
-   		<div class="col-md-8">
+   		<div class="col-md-6 name"></div>
+   		<div class="col-md-4">
    			<div class="progress"> 
 				<div class="progress-bar"></div>
 			</div>
