added r logger to ui and started refactoring calc.js

--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -55,7 +55,7 @@ $(function(){
 	    	$progressPercent.html(percentVal);
 	    },
 	    success: function ( json ) {
-	    	checkJobStatus(function() {
+	    	JobManager.getInstance().checkJobStatus(function() {
 	    		homeCalculationManager.updateSteps();
 	    	});
 	    },
