started plot aggregation

--- a/calc-webapp/src/main/webapp/sampling-design.html
+++ b/calc-webapp/src/main/webapp/sampling-design.html
@@ -18,7 +18,10 @@
 				<!-- inclusion area settings -->
 				<div class="row no-margin plot-area-section">
 					<div class="col-md-2">Plot area: </div>
-					<div class="col-md-10" style="text-align: left"><input type="text" name="plot-area" class="form-control"> </div>
+					<div class="col-md-10" style="text-align: left">
+<!-- 						<input type="text" name="plot-area" class="form-control"> -->
+						<textarea rows="1" cols="" name="plot-area" class="form-control"></textarea>
+					</div>
 				</div>
 				
 				<!-- variable aggregates section -->
