fixed height to edit-step. testing d3 for scatter plot

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -2,7 +2,7 @@
 <div class="page-section" id="step-edit-page">
 
 	<!--  Header button bar  -->
-	<div class="row no-margin-no-padding header-button-group">
+	<div class="row no-margin-no-padding header-button-group" style="height: 5%">
 		<div class="col-md-2 col-md-offset-4 no-padding">
 			<button class="btn blue-btn" name="show-edit-btn" >Edit</button>
 		</div>
@@ -13,7 +13,7 @@
 	</div>
 	
 	<!-- edit form -->
-	<div class="row" id="calculation-step-edit-container" style="width: 100%; height: 100%; left:0">
+	<div class="row" id="calculation-step-edit-container" style="width: 100%; height: 95%; left:0">
 		<div class="col-md-2">
 		</div>
 		<div class="col-md-8">
@@ -135,7 +135,7 @@
 	</div>
 	
 	<!-- Execution  -->
-	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 100%; padding-top:10px; ">
+	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 95%; padding-top:10px; ">
 		<!-- step information section -->
 		<div class="row header">
 <!-- 			<div class="col-md-1 col-md-offset-3" style="text-align: right;"> -->
@@ -216,7 +216,7 @@
 	</div>
 	
 	<!-- Results section -->
-	<div class="row" id="calculation-step-results-container" style="width: 100%; height: 100%; padding-top:10px; ">
+	<div class="row" id="calculation-step-results-container" style="width: 100%; height: 95%; padding-top:10px; ">
 		<!-- step information section -->
 		<div class="row" style="height: 100%;">
 			<div class="col-md-2">
