--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -114,7 +114,7 @@
 				<i class="icon-caret-left icon-5"></i>
 				</button>
 			</div>
-			<div class="col-md-8" >
+			<div class="col-md-6 col-md-offset-1" >
 				<div class="links">
 					<button type="button" class="calculation btn btn-default" href="#calculation">Calculation</button>
 					<!-- Result section didsabled for now -->
@@ -123,7 +123,7 @@
 					<button type="button" class="settings btn btn-default" href="#settings">Settings</button>
 				</div>
 			</div>
-			<div class="col-md-2">
+			<div class="col-md-3">
 					<div class="logo">
 					<img src="img/of-logo.png" width="35em">pen Foris Calc
 					</div>
