Fix max-height of job status task section

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -139,8 +139,8 @@
 				<div class="modal-header">
 					<h4 class="modal-title status"></h4>
 				</div>
-				<div class="modal-body"></div>
-				<div class="modal-footer">
+				<div class="modal-body">
+					<div class="task-section"></div>
 					<div class="row log-section">
 						<div class="col-md-2">
 							<button type="button" class="btn option-btn-selected toggle-log-btn">Log</button>
@@ -148,6 +148,8 @@
 						<div class="col-md-8 log">
 						</div>
 					</div>
+				</div>
+				<div class="modal-footer">
 					<button type="button" class="btn btn-default close-btn" data-dismiss="modal" aria-hidden="true">Close</button>
 				</div>
 			</div><!-- /.modal-content -->
