small improvements to calculation button bar

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -41,18 +41,25 @@
 	 			<div class="calculation-steps-outer-container"> 
 		  			<div class="button-bar">
 		  				<div class="button-bar-inner">
-			 				<div class="row no-margin" >
-				 				<div class="col-md-6 no-padding">
+			 				<div class="row no-margin height50" >
+				 				<div class="col-md-6 no-padding height100">
 				 					<button type="button" class="btn btn-home-plus" href="step-edit.html">
 					 					<i class="icon-plus-sign-alt icon-5"></i>
 					 				</button>
 				 				</div>
-				 				<div class="col-md-6 no-padding">
+<!-- 				 				<div class="col-md-6 no-padding"> -->
+<!-- 				 					<button type="button" class="btn delete" disabled="disabled"> -->
+<!-- 					 					<i class="fa-trash-o icon-5"></i> -->
+<!-- 					 				</button> -->
+<!-- 				 				</div> -->
+				 				<div class="col-md-6 no-padding height100">
 				 					<button type="button" class="btn delete" disabled="disabled">
 					 					<i class="fa-trash-o icon-5"></i>
 					 				</button>
 				 				</div>
-				 				<div class="col-md-6 no-padding">
+			 				</div>
+			 				<div class="row no-margin height50" >
+				 				<div class="col-md-6 no-padding height100">
 				 					<button type="button" class="btn execute">
 					 					<i class="fa-play icon-5"></i>
 					 				</button>
