small ui change

--- a/calc-webapp/src/main/webapp/collect-sync.html
+++ b/calc-webapp/src/main/webapp/collect-sync.html
@@ -1,7 +1,7 @@
 <div class="page-section" style="padding-top:40px;">
 	<div class="text-center" id="sync-form-section" style="width: 100%">
 		<form  method="post" enctype="multipart/form-data" action="rest/collect/data.json">
-			<button type="button" class="btn btn-default btn-lg" name="upload-btn">Start to upload Collect backup file</button>
+			<button type="button" class="btn btn-default btn-lg" name="upload-btn">Upload Collect backup file</button>
 		    <input type="file" name="file" style="display:none" />		    		    
 		</form>	
 	</div>
