--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -102,7 +102,7 @@
 		  		<div class="row row1"></div>
 		 		<div class="row row2">
 		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect Import</button>
-		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling Design</button>
+		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Aggregation</button>
 		  		</div>
 		  		<div class="row row3"></div>
 	  		</div>
