step-edit: execute section moved above test. home: delete button moved to top-right section

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -144,6 +144,13 @@
 			
 		</div>
 		
+		<!-- Execution section -->
+		<div class="row exec" >
+			<div class="col-md-2 col-md-offset-5" style="text-align: center;">
+				<button type="button" class="btn btn-default" name="exec-btn" style="width: 100%">Execute</button>
+			</div>
+		</div>
+		
 		<!-- Test section to implement -->
 		<div class="row test" >
 			<!-- TODO implement. (old progress bar below) -->
@@ -169,8 +176,10 @@
 					
 				</div>
 			</div>
+			
 			<!-- spacer -->
 			<div style="margin-top: 5em"></div>
+			
 			<div class="row">
 				<div class="col-md-2 col-md-offset-5" style="text-align: center;">
 					<button type="button" class="btn btn-default" name="test-btn" style="width: 100%">Test</button>
@@ -192,12 +201,6 @@
 				</div>
 			</div>
 
-		</div>
-		
-		<div class="row exec" >
-			<div class="col-md-2 col-md-offset-5" style="text-align: center;">
-				<button type="button" class="btn btn-default" name="exec-btn" style="width: 100%">Execute</button>
-			</div>
 		</div>
 		
 		<!-- results section -->
