--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -39,12 +39,17 @@
 	 		<div class="page-section">
 	 			
 	 			<div class="calculation-steps-outer-container"> 
-		  			<div class="button-bar">
+		  			<div class="button-bar-left">
 		  				<div class="button-bar-inner">
-			 				<div class="row no-margin height50" >
+<!-- 			 				<div class="row no-margin height100" > -->
 				 				<div class="col-md-6 no-padding height100">
 				 					<button type="button" class="btn btn-home-plus" href="step-edit.html">
 					 					<i class="icon-plus-sign-alt icon-5"></i>
+					 				</button>
+				 				</div>
+				 				<div class="col-md-6 no-padding height100">
+				 					<button type="button" class="btn execute">
+					 					<i class="fa-play icon-5"></i>
 					 				</button>
 				 				</div>
 <!-- 				 				<div class="col-md-6 no-padding"> -->
@@ -52,18 +57,29 @@
 <!-- 					 					<i class="fa-trash-o icon-5"></i> -->
 <!-- 					 				</button> -->
 <!-- 				 				</div> -->
-				 				<div class="col-md-6 no-padding height100">
+<!-- 				 				<div class="col-md-6 no-padding height100"> -->
+<!-- 				 					<button type="button" class="btn delete" disabled="disabled"> -->
+<!-- 					 					<i class="fa-trash-o icon-5"></i> -->
+<!-- 					 				</button> -->
+<!-- 				 				</div> -->
+<!-- 			 				</div> -->
+<!-- 			 				<div class="row no-margin height50" > -->
+<!-- 				 				<div class="col-md-6 no-padding height100"> -->
+<!-- 				 					<button type="button" class="btn execute"> -->
+<!-- 					 					<i class="fa-play icon-5"></i> -->
+<!-- 					 				</button> -->
+<!-- 				 				</div> -->
+<!-- 			 				</div> -->
+		  				</div>
+		 			</div>
+		 			<div class="button-bar-right">
+		  				<div class="button-bar-inner">
+<!-- 			 				<div class="row no-margin height100" > -->
+				 				<div class="col-md-12 no-padding height100">
 				 					<button type="button" class="btn delete" disabled="disabled">
 					 					<i class="fa-trash-o icon-5"></i>
 					 				</button>
-				 				</div>
-			 				</div>
-			 				<div class="row no-margin height50" >
-				 				<div class="col-md-6 no-padding height100">
-				 					<button type="button" class="btn execute">
-					 					<i class="fa-play icon-5"></i>
-					 				</button>
-				 				</div>
+<!-- 				 				</div> -->
 			 				</div>
 		  				</div>
 		 			</div>
