updated sampling design page

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -118,7 +118,8 @@
 		  		<div class="row row1"></div>
 		 		<div class="row row2">
 		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect Import</button>
-		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Aggregation</button>
+		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling design</button>
+		 			<button type="button" class="btn btn-default btn-home" href="aggregation.html">Aggregation</button>
 		  		</div>
 		  		<div class="row row3"></div>
 	  		</div>
@@ -345,9 +346,9 @@
 	<script src="./js/calc/manager/ui/calculation-step-edit-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-exec-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-results-manager.js"></script>
-	
 	<!-- sampling design  -->
 	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
+	<script src="./js/calc/manager/ui/aggregation-manager.js"></script>
 	
 </body>
 </html>
