--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -117,7 +117,8 @@
 	  		<div class="page-section">
 		  		<div class="row row1"></div>
 		 		<div class="row row2">
-		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect Import</button>
+		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect import</button>
+		 			<button type="button" class="btn btn-default btn-home" href="aoi.html">Areas of interest</button>
 		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling design</button>
 		 			<button type="button" class="btn btn-default btn-home" href="aggregation.html">Aggregation</button>
 		  		</div>
@@ -324,9 +325,11 @@
 	<!-- ui components -->
 	<script src="./js/calc/ui/jquery-ext.js"></script>
 	<script src="./js/calc/ui/progress-bar.js"></script>
+	<script src="./js/calc/ui/option-button.js"></script>
 	<script src="./js/calc/ui/job-status.js"></script>
 	
-	<!-- model objects -->
+	<!-- model objects -->		var manager = new SamplingDesignManager( $("#sampling-design") );
+	
 	<script src="./js/calc/model/workspace.js"></script>
 	<script src="./js/calc/model/entity.js"></script>
 	
@@ -346,9 +349,10 @@
 	<script src="./js/calc/manager/ui/calculation-step-edit-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-exec-manager.js"></script>
 	<script src="./js/calc/manager/ui/calculation-step-results-manager.js"></script>
-	<!-- sampling design  -->
+	<!-- settings  -->
 	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
 	<script src="./js/calc/manager/ui/aggregation-manager.js"></script>
+	<script src="./js/calc/manager/ui/aoi-manager.js"></script>
 	
 </body>
 </html>
