strata import settings

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -115,14 +115,16 @@
 	  	
 	  	<div class="section-home settings" id="settings">
 	  		<div class="page-section">
-		  		<div class="row row1"></div>
-		 		<div class="row row2">
+		  		<div class="row height33 width100">
 		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect import</button>
 		 			<button type="button" class="btn btn-default btn-home" href="aoi.html">Areas of interest</button>
+		 			<button type="button" class="btn btn-default btn-home" href="strata.html">Strata</button>
+		  		</div>
+		 		<div class="row height33 width100">
 		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling design</button>
 		 			<button type="button" class="btn btn-default btn-home" href="aggregation.html">Aggregation</button>
 		  		</div>
-		  		<div class="row row3"></div>
+		  		<div class="row  height33 width100"></div>
 	  		</div>
 	  	</div>
 	  	
@@ -353,6 +355,7 @@
 	<script src="./js/calc/manager/ui/sampling-design-manager.js"></script>
 	<script src="./js/calc/manager/ui/aggregation-manager.js"></script>
 	<script src="./js/calc/manager/ui/aoi-manager.js"></script>
+	<script src="./js/calc/manager/ui/stratum-manager.js"></script>
 	
 </body>
 </html>
