import phase1 plots started

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -115,11 +115,14 @@
 	  	
 	  	<div class="section-home settings" id="settings">
 	  		<div class="page-section">
+	  			<!-- data settings -->
 		  		<div class="row height33 width100">
 		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect import</button>
 		 			<button type="button" class="btn btn-default btn-home" href="aoi.html">Areas of interest</button>
 		 			<button type="button" class="btn btn-default btn-home" href="strata.html">Strata</button>
+		 			<button type="button" class="btn btn-default btn-home" href="phase1.html">Phase 1 plots</button>
 		  		</div>
+		  		<!-- inventory settings -->
 		 		<div class="row height33 width100">
 		 			<button type="button" class="btn btn-default btn-home" href="sampling-design.html">Sampling design</button>
 		 			<button type="button" class="btn btn-default btn-home" href="aggregation.html">Aggregation</button>
@@ -330,8 +333,7 @@
 	<script src="./js/calc/ui/option-button.js"></script>
 	<script src="./js/calc/ui/job-status.js"></script>
 	
-	<!-- model objects -->		var manager = new SamplingDesignManager( $("#sampling-design") );
-	
+	<!-- model objects -->
 	<script src="./js/calc/model/workspace.js"></script>
 	<script src="./js/calc/model/entity.js"></script>
 	
@@ -356,6 +358,7 @@
 	<script src="./js/calc/manager/ui/aggregation-manager.js"></script>
 	<script src="./js/calc/manager/ui/aoi-manager.js"></script>
 	<script src="./js/calc/manager/ui/stratum-manager.js"></script>
+	<script src="./js/calc/manager/ui/phase1-manager.js"></script>
 	
 </body>
 </html>
