--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -365,6 +365,7 @@
 	<script src="./js/calc/manager/data/scatter-plot.js"></script>
 	<script src="./js/calc/manager/data/data-view-provider.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-test-data-provider.js"></script>
+	<script src="./js/calc/manager/data/csv-table-import-manager.js"></script>
 	
 	<!-- ui managers -->
 	<script src="./js/calc/manager/ui/home-calculation-manager.js"></script>
