phase1 plots import complete.

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -364,6 +364,7 @@
 	<script src="./js/calc/manager/data/data-table.js"></script>
 	<script src="./js/calc/manager/data/scatter-plot.js"></script>
 	<script src="./js/calc/manager/data/data-view-provider.js"></script>
+	<script src="./js/calc/manager/data/table-data-provider.js"></script>
 	<script src="./js/calc/manager/data/calculation-step-test-data-provider.js"></script>
 	<script src="./js/calc/manager/data/csv-table-import-manager.js"></script>
 	
