--- a/calc-webapp/src/main/webapp/phase1.html
+++ b/calc-webapp/src/main/webapp/phase1.html
@@ -11,16 +11,39 @@
 			</form>
 		</div>
 		
-		<div class="row table-section height90">
-			<div class="col-md-4 col-md-offset-4">
-				<table style="width:100%" class="table">
-					<thead>
-					</thead>
-					<tbody>
-					</tbody>
-				</table>
+		<div class="row data-table height90">
+			<!-- pagination -->
+			<div class="row">
+				<div class="col-md-3 col-md-offset-8 data-table-pagination">
+				</div>
+				<div class="col-md-1 data-table-buttons no-padding">
+					<button class="btn default-btn prev"><i class="icon-angle-left"></i></button>
+					<button class="btn default-btn next"><i class="icon-angle-right"></i></button>			
+				</div>
+			</div>
+			<!-- data table -->
+			<div class="row">
+				<div class="col-md-12 no-padding">
+					<table class="table table-results">
+				        <thead>
+				        </thead>
+				        <tbody>
+				        </tbody>
+			      	</table>
+	      		</div>
 			</div>
 		</div>
+		
+<!-- 		<div class="row table-section height90"> -->
+<!-- 			<div class="col-md-4 col-md-offset-4"> -->
+<!-- 				<table style="width:100%" class="table"> -->
+<!-- 					<thead> -->
+<!-- 					</thead> -->
+<!-- 					<tbody> -->
+<!-- 					</tbody> -->
+<!-- 				</table> -->
+<!-- 			</div> -->
+<!-- 		</div> -->
 	
 	
 		<div class="row import-section height100">
